fix clipped options in the query config collapse

--- a/src/datasources/data-frame/components/v2/DataFrameQueryEditorV2.scss
+++ b/src/datasources/data-frame/components/v2/DataFrameQueryEditorV2.scss
@@ -1,3 +1,9 @@
+.query-configuration-section {
+    [class*='collapse__body'] {
+        overflow: visible;
+    }
+}
+
 .property-selection-section {
     [role='alert'] {
         width: 524px;
